--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <div class="parent-container">Parent Container
+    <div class="child static">Static</div>
+    <div class="child relative">Relative</div>
+    <div class="child absolute">Absolute</div>
+    <div class="child fixed">Fixed</div>
+    <div class="child sticky">Sticky</div>
+  </div>
+  </div>  
 </body>
 </html>
